# GL2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Logger.cpp  main.cpp
src/assets/shaders/: basicFrag.fs  basicVert.vs  pointToSquareGeo.gs
src/include/: Logger.h  Pch.h
